run `ruff-check`

--- a/docs/tutorials/datarmor.ipynb
+++ b/docs/tutorials/datarmor.ipynb
@@ -31,8 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask_hpcconfig\n",
-    "from distributed import Client"
+    "from distributed import Client\n",
+    "\n",
+    "import dask_hpcconfig"
    ]
   },
   {
